--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   },
   "dependencies": {
     "co": "~3.0.2",
-    "co-middleware": "~0.1.0",
-    "clone": "~0.1.11"
+    "co-middleware": "~0.2.0",
+    "clone": "~0.1.11",
+    "emitter-component": "~1.1.1"
   },
   "devDependencies": {
     "mocha": "~1.16.2",
