--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "Generator based models",
   "main": "index.js",
   "scripts": {
-    "test": "make test"
+    "test": "make test-once"
+  },
+  "config": {
+    "blanket": {
+      "pattern": "lib",
+      "data-cover-never": "node_modules"
+    }
   },
   "repository": {
     "type": "git",
@@ -28,6 +34,9 @@
   },
   "devDependencies": {
     "mocha": "~1.16.2",
-    "expect.js": "~0.2.0"
+    "expect.js": "~0.2.0",
+    "mocha-lcov-reporter": "0.0.1",
+    "blanket": "^1.1.6",
+    "coveralls": "^2.10.0"
   }
 }
